...
    <string name="total_coliform">Total Coliform</string>
    <string name="prepare_sample">Prepare sample</string>
    <string name="cbt_compartments">CBT Compartments</string>

    <string name="read_instructions">Read Instructions</string>
    <string name="take_photo_compartments">Take a photo of the compartment bag</string>
    <string name="confidenceInterval">Upper 95&#37; Confidence Interval</string>
    <string name="confidenceIntervalTc">TC Upper 95&#37; Confidence Interval</string>
    <string name="setCompartmentColors">Set compartment colors</string>

    <string name="health_risk_category">Health Risk Category (Based on MPN and Confidence Interval)</string>
    <string name="recreational_health_risk_category">US EPA Recreational Health Risk Category Based on MPN and Upper 95&#37; Confidence Level</string>

    <string name="collect_10ml_water_sample">Collect <b>10 ml</b> water sample with Thio Bag (or bottle).</string>
    <string name="avoid_touching">Avoid touching the inside of the Thio Bag, lid or bottle.</string>
    <string name="open_growth_medium">Open growth medium sachet and add powder medium or test bud straight to the sample from the sachet</string>
    <string name="dissolve_medium_in_sample_a"><b>Powder medium:</b> Dissolve medium in sample for a few minutes. Gently swirl the bag several times until the medium is completely dissolved.</string>
    <string name="dissolve_medium_in_sample_b"><b>Test bud:</b> Dissolve medium in sample for 10 – 12 minutes maximum by periodically swirling the bottle or squeezing the test bud in the Thio Bag to promote release of the medium from its plastic carrier</string>
...

    <string name="low_risk_safe">Low Risk / Safe</string>
    <string name="probably_safe">Intermediate Risk / Probably Safe</string>
    <string name="intermediate_possibly_safe">Intermediate Risk / Possibly Safe</string>
    <string name="possibly_unsafe">High Risk / Possibly Unsafe</string>
    <string name="probably_unsafe">High Risk / Probably Unsafe</string>
    <string name="very_high_risk_unsafe">Very High Risk / Unsafe</string>
    <string name="low_risk_probably_safe">Low Risk / Probably Safe</string>
    <string name="low_risk_possibly_safe">Low Risk / Possibly Safe</string>
    <string name="high_risk_probably_unsafe">High Risk / Probably Unsafe</string>
    <string name="very_unsafe">Very Unsafe</string>

    <string name="temperature">Temperature</string>
    <string name="incubation_time">Incubation Time</string>
    <string name="temperature_35_37">35 – 37°C</string>
    <string name="temperature_31_34">31 – 34°C</string>
    <string name="temperature_25_30">25 – 30°C</string>
...
