...
            android:id="@+id/imageResult"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="@drawable/view_border"
            android:contentDescription="@string/result" />

        <Button
            android:id="@+id/takePhoto"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
